--- a/fullnews.html
+++ b/fullnews.html
@@ -21,7 +21,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - google font link
@@ -216,7 +216,7 @@ Humanity Support News line
   <!-- 
     - custom js link
   -->
-  <script src="assets/js/script.js" defer></script>
+  <script src="script.js" defer></script>
 
   <!-- 
     - ionicon link
