--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - google font link
@@ -463,7 +463,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="assets/js/script.js" defer></script>
+  <script src="script.js" defer></script>
 
   <!-- 
     - ionicon link
