--- a/fullnews.html
+++ b/fullnews.html
@@ -11,7 +11,7 @@
   -->
   <title>Blogy - Hey, we’re Blogy. See our thoughts, stories and ideas.</title>
   <meta name="title" content="Blogy - Hey, we’re Blogy. See our thoughts, stories and ideas.">
-  <meta name="description" content="This is a blog html template made by codewithsadee">
+  <meta name="description" content="This is a breaking news blog PayPal">
 
   <!-- 
     - favicon
